# blake3-balanced

./: .gitmodules  Cargo.toml  README.md  build.rs
benches/: element-web-vendor-simple.rs  element-web-vendor.rs
fuzz/: Cargo.toml  README.md
fuzz/src/: main.rs
src/: compress.rs  join.rs  lib.rs  platform.rs
src/compress/: complex.rs  mod.rs  simple.rs
tests/data/: fuzz_00  fuzz_01  fuzz_02  fuzz_03  fuzz_04
