[package]
name = "blake3-simple"
version = "0.1.0"
description = "A simple blake3 implementation based on its rust reference"
authors = ["Chip Reed <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
arrayvec = "0.7"
arrayref = "0.3"

[dev-dependencies]
blake3 = { version = "1", features = ["rayon", "pure"] }
blake3-reference = { git = "https://github.com/BLAKE3-team/BLAKE3", package = "reference_impl" }
criterion = "0.3"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "element-web-vendor"
harness = false

[[bench]]
name = "element-web-vendor-simple"
harness = false