[package]
name = "blake3-simple"
version = "0.1.0"
description = "A simple blake3 implementation based on its rust reference"
authors = ["Chip Reed <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
rayon = { version = "1", optional = true }

[build-dependencies]
rustflags = { version = "0.1", optional = true }

[dev-dependencies]
blake3 = { version = "1", features = ["pure"] }
blake3-reference = { git = "https://github.com/BLAKE3-team/BLAKE3", package = "reference_impl" }
criterion = "0.3"

[profile.bench]
debug = true

[[bench]]
name = "element-web-vendor"
harness = false
