[package]
name = "blake3-balanced"
version = "0.1.0"
description = "A balanced blake3 implementation for compilation time"
authors = ["Chip Reed <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
blake3 = { version = "1", features = ["pure","rayon"] }
blake3-reference = { git = "https://github.com/BLAKE3-team/BLAKE3", package = "reference_impl" }
criterion = "0.3"

[profile.bench]
debug = true

[[bench]]
name = "element-web-vendor"
harness = false
